# Sound_Capsule

./: .gitignore  DAL_REFACTORING_REPORT.md  JIT_IMPLEMENTATION_REPORT.md  LOGOUT_FEATURE_TEST_GUIDE.md  PHASE_A_COMPLETION_REPORT.md  PHASE_A_FINAL_COMPLETION_REPORT.md  PHASE_A_FRONTEND_TEST_GUIDE.md  PHASE_A_TESTING_CHECKLIST.md  PHASE_B1-B4_COMPLETION_REPORT.md  PHASE_B1_COMPLETION_REPORT.md  PHASE_B2_COMPLETION_REPORT.md  PHASE_B3_COMPLETION_REPORT.md  PHASE_B4_COMPLETION_REPORT.md  PHASE_B5_COMPLETION_REPORT.md  PHASE_B_COMPLETION_REPORT.md  PHASE_B_END_TO_END_TEST_PLAN.md  PHASE_B_FRONTEND_TEST_GUIDE.md  PHASE_B_PROGRESS_REPORT.md  PHASE_B_TEST_GUIDE.md  PHASE_B_TEST_REPORT.md  PHASE_C1_COMPLETION_REPORT.md  PHASE_C1_DETAILED_PLAN.md  PHASE_C1_E2E_TEST_REPORT.md  PHASE_C1_FINAL_COMPLETION_REPORT.md  PHASE_C1_ULTIMATE_COMPLETION_REPORT.md  PHASE_C2_C3_COMPLETION_REPORT.md  PHASE_C2_C3_VERIFICATION_REPORT.md  PHASE_C2_COMPLETION_REPORT.md  PHASE_C2_DETAILED_PLAN.md  PHASE_C3_CLIENT_INTEGRATION_PLAN.md  PHASE_C_COMPLETION_REPORT.md  PHASE_C_DAL_COMPLETION_SUMMARY.md  PHASE_C_DETAILED_PLAN.md  PHASE_C_DOWNLOAD_FIX_COMPLETION_REPORT.md  PHASE_C_INTEGRATION_COMPLETION_REPORT.md  PHASE_C_SUPABASE_INTEGRATION_PLAN.md  PHASE_DEF_FINAL_SUMMARY.md  PHASE_D_E_F_COMPLETION_REPORT.md  PHASE_E_COMPLETION_REPORT.md  PHASE_E_PACKAGING_REPORT.md  (+21 more)
webapp/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
webapp/src-tauri/capabilities/: default.json
webapp/src-tauri/icons/: create_icons.py  generate_capsule_icons.py  generate_capsule_icons_simple.py  generate_icons.md  (+1 more)
(+283 files in other folders)
